# walsh-transformator

./: .gitignore  README.md  cli.py  pyproject.toml
.github/workflows/: tests.yml 
images/: couple.pgm
tests/: base_function_test.py  cosine_test.py  image_test.py  l1_norm_test.py  l2_norm_test.py  linf_norm_test.py  something_for_testing.py  test_function_test.py  test_utils.py  walsh_test.py  wavelet_test.py
tests/benchmarks/: base_function_values.py  error_measuring.py
transformations/discrete_cosine_transformation_1d/: discrete_cosine_1d.py  discrete_cosine_transformation_1d.py
transformations/discrete_cosine_transformation_2d/: discrete_cosine_function_2d.py  discrete_cosine_transformation_2d.py
transformations/discrete_sine_transformation/: discrete_sine_1d.py  discrete_sine_transformation_1d.py
transformations/walsh_transformation_1d/: experimental_walsh_function.py  experimental_walsh_transform.py  walsh_function_1d.py  walsh_transformation_1d.py
transformations/walsh_transformation_2d/: experimental_walsh_transformation2d.py  walsh_function_2d.py  walsh_transformation_2d.py
transformations/wavelet_transformation_1d/: haar_wavelet_1d.py  wavelet_transformation_1d.py
transformations/wavelet_transformation_2d/: haar_wavelet_2d.py  wavelet_transformation_2d.py
utility/: cli_helper.py  cli_input.py  color.py  test_functions_1d.py  test_functions_2d.py  timer.py  utils.py
utility/templates/: base_functions.py  base_transformations.py  test_functions.py
