[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Walsh-Transformator"
version = "1.0.0"
description = "This program allows to compute the Walsh-transform of one and two dimensional functions, manipulate coefficients and calculate errors."
authors = [{ name = "Orlando Ackermann", email = "orlac2700@gmail.com" }]
requires-python = ">=3.12"

dependencies = [
    "matplotlib==3.10.6",
    "numpy==2.3.3",
    "Pillow==11.3.0",
    "prompt_toolkit==3.0.52",
    "scipy==1.16.2"
]
